--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 PORT=3000
-MONGO_URI=mongodb://mongo:27017/bolota
+MONGO_URI=mongodb://mongo:27017/bolota_db
 CSV_PATH=/mnt/data/dados_produtos.csv
-PUBMED_URL=http://localhost:3000/pubmed
+PUBMED_URL=https://eutils.ncbi.nlm.nih.gov/entrez/eutils
 MEDS_URL=http://localhost:3000/medications
+LOG_LEVEL=info
