--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "bolota_iagente",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "seed": "node src/database/seedCSV.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
