feat: Adds support to PubMed internal URLs and improves Medication search

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ PORT=3000
 MONGO_URI=mongodb://mongo:27017/bolota_db
 CSV_PATH=/mnt/data/dados_produtos.csv
 PUBMED_URL=https://eutils.ncbi.nlm.nih.gov/entrez/eutils
+PUBMED_INTERNAL_URL=http://localhost:3000/pubmed
 MEDS_URL=http://localhost:3000/medications
 LOG_LEVEL=info
 
@@ -11,5 +12,6 @@ MONGO_URI=mongodb://mongo:27017/bolota_db
 CSV_PATH=./dados_produtos.csv
 # PUBMED_API_BASE=https://eutils.ncbi.nlm.nih.gov/entrez/eutils/
 PUBMED_URL=https://eutils.ncbi.nlm.nih.gov/entrez/eutils
+PUBMED_INTERNAL_URL=http://localhost:3000/pubmed
 MEDS_URL=http://localhost:3000/medications
 LOG_LEVEL=info
